<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/url"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/link"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:onClick="openSite"
            android:text="@string/openWeb" />

        <EditText
            android:id="@+id/loc"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/location" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:onClick="openLocation"
            android:text="@string/openLoc" />

        <EditText
            android:id="@+id/mess"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/message" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:onClick="shareMessage"
            android:text="@string/sendMess" />
    </LinearLayout>

    <!-- maxImageSize is to change the size of icon inside the floating button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openCamera"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:fabSize="normal"
        app:fabCustomSize="85dp"
        app:maxImageSize="50dp"
        app:layout_anchor="@id/linearLayout"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>